src/patternfly/components/Table/table-grid.scss
/* ... */
// - Table grid
.#{$table}[class*="pf-m-grid"] {
  // ============================================================ //
  // Start non-conformant variables
  //
  // these variables do not conform to guidelines as styling targets individual elements
  // this is purposeful and necessary to avoid adding selectors to each td/th
  // ============================================================ //

  // * Table responsive
  --#{$table}--responsive--BorderColor: var(--pf-t--global--border--color--default);

  // * Table body
  --#{$table}__tbody--responsive--border-width--base: var(--pf-t--global--border--width--divider--default);
  --#{$table}__tbody--after--border-width--base: var(--pf-t--global--border--width--extra-strong);
  --#{$table}__tbody--after--BorderInlineStartWidth: 0;
  --#{$table}__tbody--after--BorderColor: var(--pf-t--global--border--color--clicked);

  // * Table tr responsive
  --#{$table}__tr--responsive--border-width--base: var(--pf-t--global--border--width--divider--default);
  --#{$table}__tr--responsive--last-child--BorderBlockEndWidth: var(--#{$table}__tbody--responsive--border-width--base);
  --#{$table}__tr--responsive--GridColumnGap: var(--pf-t--global--spacer--md);
  --#{$table}__tr--responsive--MarginBlockStart: var(--#{$table}__tbody--responsive--border-width--base);
  --#{$table}__tr--responsive--PaddingBlockStart: var(--pf-t--global--spacer--md);
  --#{$table}__tr--responsive--PaddingInlineEnd: var(--pf-t--global--spacer--lg);
  --#{$table}__tr--responsive--PaddingBlockEnd: var(--pf-t--global--spacer--md);
  --#{$table}__tr--responsive--PaddingInlineStart: var(--pf-t--global--spacer--lg);

  // * Table tr responsive nested table
  --#{$table}__tr--responsive--nested-table--PaddingBlockStart: var(--pf-t--global--spacer--xl);
  --#{$table}__tr--responsive--nested-table--PaddingInlineEnd: var(--pf-t--global--spacer--lg);
  --#{$table}__tr--responsive--nested-table--PaddingBlockEnd: var(--pf-t--global--spacer--xl);
  --#{$table}__tr--responsive--nested-table--PaddingInlineStart: var(--pf-t--global--spacer--lg);

  // * Table tbody
  --#{$table}__tbody--after__tr--BorderInlineStartWidth: 0;
  --#{$table}__tbody--after__tr--BorderInlineStartColor: transparent;
  --#{$table}__tbody--m-expanded--after__tr--BorderInlineStartWidth: var(--#{$table}__expandable-row--after--border-width--base);
  --#{$table}__tbody--m-expanded--after__tr--BorderInlineStartColor: var(--pf-t--global--border--color--clicked);

  // * Table tbody selected
  --#{$table}__tbody--m-selected--after__tr--BorderInlineStartWidth: var(--#{$table}__expandable-row--after--border-width--base);
  --#{$table}__tbody--m-selected--after__tr--BorderInlineStartColor: var(--pf-t--global--border--color--clicked);

  // * Table grid cell
  --#{$table}--m-grid--cell--hidden-visible--Display: grid;

  // * Table grid cell
  --#{$table}--m-grid--cell--PaddingBlockStart: 0;
  --#{$table}--m-grid--cell--PaddingInlineEnd: 0;
  --#{$table}--m-grid--cell--PaddingBlockEnd: 0;
  --#{$table}--m-grid--cell--PaddingInlineStart: 0;

  // * Table td responsive
  --#{$table}-td--responsive--GridColumnGap: var(--pf-t--global--spacer--md);
  --#{$table}--cell--responsive--PaddingBlockStart: var(--pf-t--global--spacer--md);
  --#{$table}--cell--responsive--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
  --#{$table}--cell--first-child--responsive--PaddingBlockStart: var(--pf-t--global--spacer--sm);
  --#{$table}--cell--responsive--PaddingInlineEnd: 0;
  --#{$table}--cell--responsive--PaddingInlineStart: 0;

  // * Table grid compact table
  --#{$table}--m-compact__tr--responsive--PaddingBlockStart: var(--pf-t--global--spacer--sm);
  --#{$table}--m-compact__tr--responsive--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
  --#{$table}--m-compact__tr__td--responsive--PaddingBlockStart: var(--pf-t--global--spacer--xs);
  --#{$table}--m-compact__tr__td--responsive--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
  --#{$table}--m-compact__check--responsive--MarginBlockStart: #{pf-size-prem(7px)};
  --#{$table}--m-compact__action--responsive--MarginBlockStart: calc(var(--pf-t--global--spacer--xs) * -1);
  --#{$table}--m-compact__action--responsive--MarginBlockEnd: calc(var(--pf-t--global--spacer--xs) * -1);
  --#{$table}--m-compact__toggle--c-button--responsive--MarginBlockEnd: calc(#{pf-size-prem(6px)} * -1);

  // * Table grid expandable row content
  --#{$table}__expandable-row-content--responsive--PaddingInlineEnd: var(--pf-t--global--spacer--lg);
  --#{$table}__expandable-row-content--responsive--PaddingInlineStart: var(--pf-t--global--spacer--lg);
  --#{$table}__expandable-row-content--BackgroundColor: var(--pf-t--global--background--color--primary--default);

  // * Table check
  --#{$table}__check--responsive--MarginInlineStart: var(--#{$table}__tbody--responsive--border-width--base);
  --#{$table}__check--responsive--MarginBlockStart: #{pf-size-prem(14px)};

  // * Table grid favorite
  --#{$table}--m-grid__favorite--MarginBlockStart: #{pf-size-prem(8px)};
  --#{$table}--m-grid__check--favorite--MarginInlineStart: var(--pf-t--global--spacer--xl);

  // * Table grid action
  --#{$table}--m-grid__action--MarginBlockStart: #{pf-size-prem(6px)};
  --#{$table}__action--responsive--MarginInlineStart: var(--pf-t--global--spacer--xl);
  --#{$table}--m-grid__favorite--action--MarginInlineStart: var(--pf-t--global--spacer--2xl);
  --#{$table}--m-grid__check--favorite--action--MarginInlineStart: calc(var(--#{$table}--m-grid__check--favorite--MarginInlineStart) + var(--#{$table}--m-grid__favorite--action--MarginInlineStart));

  // * Table grid toggle icon
  --#{$table}__toggle__icon--Transition: .2s ease-in 0s;
  --#{$table}__toggle--m-expanded__icon--Rotate: 180deg;
}
/* ... */

